--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+#Art packs
+Content\Modular_MedievalTown_WI\*
